name:                nanomsg-hs
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1
synopsis:            Haskell API and binding for nanomsg C library (http://nanomsg.org)
description:         
  Nanomsg-hs, provides an API for simple usage with Haskell and with a Socket Type abstraction similar to zeromq3-haskell. The Haskell typing is used to reduce in use error occurence.
  The API may not be suited to advanced usage, in term of performance, or library customization. In this case the lower level C binding could be used .
homepage:            http://github.com/cheme/nanomsg-hs
license:             MIT
license-file:        LICENSE
author:              Émeric Chevalier
maintainer:          emericchevalier.pro@gmail.com
copyright:           Copyright (c) 2013 nanomsg-hs authors
category:            System, FFI
stability:           experimental
tested-With:         GHC == 7.6.3
build-type:          Simple
extra-source-files:  README.md
                  ,  AUTHORS
cabal-version:       >=1.10


library
  exposed-modules:     System.NanoMsg, System.NanoMsg.C.NanoMsg, System.NanoMsg.C.NanoMsgStruct
  other-modules:       
  includes:            System/NanoMsg/C/inlinemacro.h
  include-dirs:        System/NanoMsg/C/
  c-sources:           System/NanoMsg/C/inlinemacro.c
  ghc-options:         -Wall -O2
  other-extensions:    OverloadedStrings, CPP, ForeignFunctionInterface, EmptyDataDecls
  extra-libraries:     nanomsg
  build-depends:       base >=4.6 && <4.7, bytestring >=0.10 && <0.11
  build-tools:         hsc2hs, c2hs
  default-language:    Haskell2010


source-repository head
    type: git
    location: https://github.com/cheme/nanomsg-hs
