name:                nanomsg-hs
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1
synopsis:            Binding for nanomsg C library 
description:         
  Nanomsg-hs, provides an API for simple usage with Haskell and with a Socket Type abstraction similar to zeromq3-haskell. The Haskell typing is used to reduce in use error occurence.
  The API may not be suited to advanced usage, in term of performance, or library customization. In this case the lower level C binding could be used. For nanomsg documentation please refer to http://nanomsg.org.
homepage:            http://github.com/cheme/nanomsg-hs
license:             MIT
license-file:        LICENSE
author:              Émeric Chevalier
maintainer:          emericchevalier.pro@gmail.com
copyright:           Copyright (c) 2013 nanomsg-hs authors
category:            System, FFI
stability:           experimental
tested-With:         GHC == 7.6.3
build-type:          Simple
extra-source-files:  README.md
                  ,  AUTHORS
                  ,  test/*.hs
cabal-version:       >=1.10


library
  exposed-modules:     System.NanoMsg, System.NanoMsg.C.NanoMsg, System.NanoMsg.C.NanoMsgStruct
  other-modules:       
  includes:            System/NanoMsg/C/inlinemacro.h
  include-dirs:        System/NanoMsg/C/
  c-sources:           System/NanoMsg/C/inlinemacro.c
  ghc-options:         -Wall -O2
  other-extensions:    OverloadedStrings, CPP, ForeignFunctionInterface, EmptyDataDecls
  extra-libraries:     nanomsg
  build-depends:       base >=4.6 && <4.7, bytestring >=0.10 && <0.11
  build-tools:         hsc2hs, c2hs
  default-language:    Haskell2010

test-suite nanomsg-hs-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             main.hs
  other-modules:       Api
  build-depends:       nanomsg-hs, base >=4.6 && <4.7, bytestring >=0.10 && <0.11, QuickCheck >= 2.6, HUnit >= 1.2
  ghc-options:         -Wall -O2 -threaded -rtsopts


source-repository head
    type: git
    location: https://github.com/cheme/nanomsg-hs
