name:                examples
tested-With:         GHC == 7.6.3
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Kvsimple
  ghc-options:         -Wall -O2 -threaded
  other-extensions:    OverloadedStrings, CPP, ForeignFunctionInterface, EmptyDataDecls, DeriveDataTypeable, unordered-containers
  build-depends:       base >=4.6 && <4.7, bytestring >=0.10 && <0.11, nanomsg-hs, binary, hashable, random
  default-language:    Haskell2010
